<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bn_sort"
        android:title=""
        app:showAsAction="always" />
</menu>