...
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bn_delete_yes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:textColor="@color/white" />

        <Space
...
