...
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_register">Need an account? <a href="">Register here</a></string>
    <string name="login_loading">Processing request. Please wait…</string>
    <string name="login_account_not_exists">The email you\'ve entered doesn\'t match any account</string>
    <string name="login_wrong_password">The password you\'ve entered is incorrect</string>
    <string name="login_no_email">Please enter your email to continue</string>
    <string name="login_no_password">Please enter your password to continue</string>
    <string name="login_too_many_requests">We have blocked all requests from this device due to unusual activity. Try again later.</string>
    <string name="login_unknown_error">An error has occurred. Please try again later</string>

    <string name="register_create">Create account</string>
    <string name="register_name">Name</string>
    <string name="register_password2">Retype password</string>
...
